--- a/calc.html
+++ b/calc.html
@@ -16,7 +16,7 @@
 	<button class="pow">^</button>
 	<button class="root">Root</button>
 	<button  class="reset" value="Reset">Reset</button></br>
-	</br>Ans : <input type="text" name="result" class="result"></br>
+	</br><input type="text" name="result" class="result"></br>
 	
 
 </body>
