--- a/form1.html
+++ b/form1.html
@@ -1,12 +1,28 @@
  <html>
     <body>
       <form action='/thank'  method='post' name='form1'>
-          Name:</p><input type= 'text' name='name'>
-          Email:</p><input type='text' name='email'>
-          address:</p><input type='text' name='address'>
-          Mobile number:</p><input type='text' name='mobilno'>
-        <input type='submit' value='submit'>
-        <INPUT type='reset'  value='reset'>
+          <table>
+          <tr>
+            <td>Name:</td>
+            <td><input type= 'text' name='name'></td>
+          </tr>
+          <tr>
+            <td>Email:</td>
+            <td><input type='text' name='email'></td>
+          </tr>
+          <tr>
+            <td>address:</td>
+            <td><input type='text' name='address'></td>
+          </tr>
+          <tr>
+            <td>Mobile number:</td>
+            <td><input type='text' name='mobilno'></td>
+          </tr>  
+          <tr>
+            <td><input type='submit' value='submit'></td>
+            <td><input type='reset'  value='reset'></td>
+          </tr>   
+      </table>
       </form>
     </body>
   </html>
